DTSPB-4434 Fix FT